  1.1 version of the spec to 2.0, adding return type hints. The copycat
  interface MediaWiki\Rest\ResponseInterface has been likewise updated.
* The global function wfAssembleUrl(), deprecated in 1.39, has been removed.
  Instead, use UrlUtils::assemble().
* Parser::Options(), deprecated in 1.35, has been dropped. Instead, use the
  ::getOptions() and ::setOptions() methods.
* …

=== Deprecations in 1.46 ===

* (T166010) All PHP code in MediaWiki is slowly being moved to be in a class
  namespace as appropriate, so that we can use PSR-4 auto-loading, which will
  speed up general code loading of MediaWiki. The old global namespace class
  names are being left behind as deprecated aliases.

  In this release of MediaWiki, XXX classes now have a namespace and XXX do
  not yet (XXX% done, up from 89% in MediaWiki 1.45.0). The following have newly
  been moved:
  - Actions related hooks: MediaWiki\Hook => MediaWiki\Actions\Hook
    - ActionBeforeFormDisplayHook
    - ActionModifyFormFieldsHook
    - CustomEditorHook
    - HistoryPageToolLinksHook
    - HistoryToolsHook
    - InfoActionHook
    - PageHistoryBeforeListHook
    - PageHistoryLineEndingHook
    - PageHistoryPager__doBatchLookupsHook
    - PageHistoryPager__getQueryInfoHook
    - RawPageViewBeforeOutputHook
    - UnwatchArticleCompleteHook
    - UnwatchArticleHook
    - WatchArticleCompleteHook
    - WatchArticleHook
  - Actions related pager: MediaWiki\Pager => MediaWiki\Actions\Pager
    - HistoryPager
  - MediaWiki\Autoload:
    - ClassCollector
    - AutoloadGenerator
  - MediaWiki\Collation:
    - AbkhazUppercaseCollation
    - BashkirUppercaseCollation
    - CentralKurdishUppercaseCollation
    - Collation
    - CollationCkb
    - CustomUppercaseCollation
    - IcuCollation
    - IdentityCollation
    - InariSaamiUppercaseCollation
    - NumericUppercaseCollation
    - RemoteIcuCollation
    - UppercaseCollation
  - Collation related hook: MediaWiki\Hook => MediaWiki\Collation\Hook