@@ -245,6 +245,12 @@ because of Phabricator reports.
   Instead, use UrlUtils::assemble().
 * Parser::Options(), deprecated in 1.35, has been dropped. Instead, use the
   ::getOptions() and ::setOptions() methods.
+* Various deprecated Parser class functions have been dropped.
+  - Parser::OutputType(), depercated in 1.35. Use ::getOutputType() and
+    ::setOutputType() instead.
+  - Parser::getFunctionLang(), deprecated in 1.40. Use ::getTargetLanguage().
+  - Parser::doBlockLevels(), deprecated in 1.35. Internal-only replacement
+    is provided by BlockLevelPass::doBlockLevels().
 * …
 
 === Deprecations in 1.46 ===
